# test_task_c-

./: README.md
task1/src/: CMakeLists.txt  main.cpp
task2/: CMakeLists.txt
task2/poco/lib/: libPocoCrypto.so.62  libPocoEncodings.so.62  libPocoMongoDB.so.62  libPocoNetSSL.so.62  libPocoRedis.so.62  libPocoZip.so.62
task2/src/: main.cpp
